--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "heliumswift",
-  "version": "1.0.0",
-  "description": "Crispy abstractions package based on GetAutomaApp/SwiftWebDriver to do automate a web browser with less code.",
-  "keywords": [
-    "helium",
-    "helium",
-    "swift",
-    "browser-automation"
-  ],
-  "homepage": "https://github.com/GetAutomaApp/HeliumSwift#readme",
-  "bugs": {
-    "url": "https://github.com/GetAutomaApp/HeliumSwift/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GetAutomaApp/HeliumSwift.git"
-  },
-  "license": "ISC",
-  "author": "William Ferns",
-  "type": "commonjs",
-  "main": "index.js",
-  "scripts": {
-    "test": "swift test"
-  }
+    "name": "heliumswift",
+    "version": "1.0.0",
+    "description": "Crispy abstractions package based on GetAutomaApp/SwiftWebDriver to do automate a web browser with less code.",
+    "scripts": {
+        "format": "swiftformat .",
+        "lint": "swiftlint .",
+        "install:all": "npx npm-run-all install:swiftformat install:swiftlint config",
+        "install:swiftformat": "brew install swiftformat",
+        "install:swiftlint": "brew install swiftlint",
+        "config": "./.dotfiles/config.sh",
+        "update:submodules": "git submodule foreach --recursive 'branch=$(git remote show origin | awk \"/HEAD branch/ {print \\$NF}\"); git checkout $branch && git pull origin $branch' && CHANGED=$(git status --porcelain | grep '^ M \\.dotfiles' || true) && if [ -n \"$CHANGED\" ]; then npm run config; fi && git add -A && git commit -m \"chore: update submodules\" || echo 'No changes to commit'"
+    },
+    "keywords": [
+        "helium",
+        "helium",
+        "swift",
+        "browser-automation"
+    ],
+    "homepage": "https://github.com/GetAutomaApp/HeliumSwift#readme",
+    "bugs": {
+        "url": "https://github.com/GetAutomaApp/HeliumSwift/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/GetAutomaApp/HeliumSwift.git"
+    },
+    "license": "ISC",
+    "author": "William Ferns"
 }
